Fix Home page gap between Title and Links

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,11 +7,11 @@
 }
 
 .homeHeader {
-    flex: 1;
+    flex: .3;
     text-align: center;
     font-size: 4vh;
     margin-top: 10px;
-    text-decoration-line: underline;
+    font-weight: bold;
 }
 
 .homeDivider {
